# first-graph

./: .gitignore  CLAIMS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: anchor_demo.py  apk-release.json  graph_bridge_demo.py  invoice_demo.py  news-release.json  night-audit.json  second_judge_demo.py
experiments/: __init__.py
experiments/echo/: README.md  __init__.py  __main__.py  prompts.py  providers.py  report.py  runner.py  stats.py  stubs.py  tasks.py  truth.py
first_graph/: __init__.py  __main__.py  anchors.py  arrows.py  graph.py
first_graph/extras/: __init__.py  claude_cli.py  cli.py  graph_bridge.py  human_gate.py  invoice.py  judge_cases.py  prices.example.json  second_judge.py
tests/: test_anchors.py  test_arrows.py  test_echo_experiment.py  test_frozen_rules.py  test_graph.py  test_graph_bridge.py  test_invoice.py  test_second_judge.py
tests/fixtures/: graph_sample.json
